상품 화면 이동 요청과 페이지를 추가하라
구매를 위해서 상품을 조회하는 페이지 이동을 추가합니다

--- a/app/src/main/resources/templates/books/books-lists.mustache
+++ b/app/src/main/resources/templates/books/books-lists.mustache
@@ -150,7 +150,7 @@
                 </table>
                 <button type="submit" class="btn btn-primary">스터디 생성</button>
                 <button type="button" class="btn btn-warning" onclick="location.href='/studies/open?title={{title}}'">스터디 검색</button>
-                <button type="button" class="btn btn-success" onclick="location.href='/orders?title={{title}}'">구매</button>
+                <button type="button" class="btn btn-success" onclick="location.href='/items?title={{title}}'">구매</button>
                 <button type="button" class="btn btn-danger">취소</button>
             </form>
         </div>
