--- a/app/src/main/resources/templates/studies/studies-list.mustache
+++ b/app/src/main/resources/templates/studies/studies-list.mustache
@@ -18,24 +18,24 @@
         var next = $(".next").val();
     })
 
-    function go_targetPage(num) {
+    function go_targetPage(num, studyState) {
         document.frmList.target = '';
         document.frmList.page.value = num - 1;
-        document.frmList.action = "/interviews";
+        document.frmList.action = "/studies/" + studyState.toLowerCase();
         document.frmList.submit();
     }
 
-    function go_previous() {
+    function go_previous(studyState) {
         document.frmList.target = '';
         document.frmList.page.value = $(".previous").val() -1;
-        document.frmList.action = "/interviews";
+        document.frmList.action = "/studies/" + + studyState.toLowerCase();
         document.frmList.submit();
     }
 
-    function go_next() {
+    function go_next(studyState) {
         document.frmList.target = '';
         document.frmList.page.value = $(".next").val() -1;
-        document.frmList.action = "/interviews";
+        document.frmList.action = "/studies" + + studyState.toLowerCase();
         document.frmList.submit();
     }
 
@@ -139,21 +139,21 @@
                     </tbody>
                 </table>
                 <div class="list_paging"  style="text-align: center;">
-                    <a class="btn_first" href="javascript:void(0)" onclick="go_targetPage('0')">
+                    <a class="btn_first" href="javascript:void(0)" onclick="go_targetPage('0', '{{StudyListInfoDto.studyState.code}}')">
                         <img src="http://image.kyobobook.co.kr/new_ink/booknews/FRONT/images/common/pg_prev10.gif" alt="처음">
                     </a>
-                    <a class="btn_prev" href="javascript:void(0)" onclick="go_previous()">
+                    <a class="btn_prev" href="javascript:void(0)" onclick="go_previous('{{StudyListInfoDto.studyState.code}}')">
                         <img src="http://image.kyobobook.co.kr/new_ink/booknews/FRONT/images/common/pg_prev.gif" alt="이전">
                     </a>
                     {{#page.pageNumbers}}
-                        <a class="page{{.}}" href="javascript:void(0)" onclick="go_targetPage('{{.}}')">
+                        <a class="page{{.}}" href="javascript:void(0)" onclick="go_targetPage('{{.}}', '{{StudyListInfoDto.studyState.code}}')">
                             {{.}}
                         </a>
                     {{/page.pageNumbers}}
-                    <a class="btn_next" href="javascript:void(0)" onclick="go_next()">
+                    <a class="btn_next" href="javascript:void(0)" onclick="go_next('{{StudyListInfoDto.studyState.code}}')">
                         <img src="http://image.kyobobook.co.kr/new_ink/booknews/FRONT/images/common/pg_next.gif" alt="이후">
                     </a>
-                    <a class="btn_last" href="javascript:void(0)" onclick="go_targetPage('{{page.totalPages}}')">
+                    <a class="btn_last" href="javascript:void(0)" onclick="go_targetPage('{{page.totalPages}}', {{StudyListInfoDto.studyState.code}})">
                         <img src="http://image.kyobobook.co.kr/new_ink/booknews/FRONT/images/common/pg_next10.gif" alt="마지막">
                     </a>
                 </div>
