--- a/app/src/main/resources/templates/layout/header.mustache
+++ b/app/src/main/resources/templates/layout/header.mustache
@@ -29,7 +29,7 @@
     <div class="collapse navbar-collapse" id="navMenu">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a href="/studies/open" class="nav-link">스터디 게시판</a>
+                <a href="/studies/open?page=0" class="nav-link">스터디 게시판</a>
             </li>
             <li class="nav-item">
                 <a href="/books/bestseller" class="nav-link">도서 검색</a>
