--- a/app/src/main/resources/templates/studies/studies-list.mustache
+++ b/app/src/main/resources/templates/studies/studies-list.mustache
@@ -126,7 +126,7 @@
                             <td class="text-center d-none d-md-table-cell"><a href='/studies/{{id}}'>{{name}}</a></td>
                             <td class="text-center d-none d-md-table-cell">{{bookName}}</td>
                             <td class="text-center d-none d-md-table-cell">{{applyCount}} / {{size}}</td>
-                            <td class="text-center d-none d-md-table-cell">{{startDate}} {{startTime}}({{day.title}})</td>
+                            <td class="text-center d-none d-md-table-cell">{{startDate}} {{startTime}}</td>
                             <td class="text-center d-none d-md-table-cell" style="text-align: center;">
                                 <div>
                                     <i class="{{#liked}}fas{{/liked}} {{^liked}}far{{/liked}} fa-heart" id="studyLike{{id}}"
