#100-스터디 다음 페이지 조회버튼을 개선하라
스터디 리스트 화면에서 화살표를 누를 시,
10페이지씩 증가된 페이징 번호와 함께
다음 스터디 페이지가 나와야 합니다

하지만 404 오류를 반환하므로, UI 화면에서
`+`가 중복으로 들어간 부분을 제거합니다

--- a/app/src/main/resources/templates/studies/studies-list.mustache
+++ b/app/src/main/resources/templates/studies/studies-list.mustache
@@ -28,14 +28,14 @@
     function go_previous(studyState) {
         document.frmList.target = '';
         document.frmList.page.value = $(".previous").val() -1;
-        document.frmList.action = "/studies/" + + studyState.toLowerCase();
+        document.frmList.action = "/studies/" + studyState.toLowerCase();
         document.frmList.submit();
     }
 
     function go_next(studyState) {
         document.frmList.target = '';
         document.frmList.page.value = $(".next").val() -1;
-        document.frmList.action = "/studies" + + studyState.toLowerCase();
+        document.frmList.action = "/studies/" + studyState.toLowerCase();
         document.frmList.submit();
     }
 
