--- a/app/src/main/resources/templates/layout/header.mustache
+++ b/app/src/main/resources/templates/layout/header.mustache
@@ -4,7 +4,7 @@
     <title>BookClub</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="#">
+    <link rel="shortcut icon">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/js/app/header.css">
     <link rel="stylesheet" type="text/css" href="/js/app/loadingBar.css">
