[#114] 스터디 지원현황 화면 요청 테스트를 추가하라
스터디 지원현황 화면 요청 테스트를 추가합니다

1. 로그인한 경우
2. 로그인 하지 않은 경우

--- a/app/src/main/resources/templates/studies/studies-users-list.mustache
+++ b/app/src/main/resources/templates/studies/studies-users-list.mustache
@@ -10,6 +10,7 @@
     }
 </style>
 <div class="container-fluid" style="margin-top: 100px">
+    {{#StudyInfoResultDto}}
     <div class="row">
         <div class="col-md-2">
             <div class="panel panel-info">
@@ -48,5 +49,8 @@
             </div>
         </div>
     </div>
+    {{/StudyInfoResultDto}}
+    {{^StudyInfoResultDto}}
+    {{/StudyInfoResultDto}}
 </div>
 {{>layout/footer}}
