[fix] 리턴되는 url을 수정하라
studys에서 studies로 url을 변경하였으나 반영하지 않은 것을 수정합니다

--- a/app/src/main/resources/templates/studies/studies-detail.mustache
+++ b/app/src/main/resources/templates/studies/studies-detail.mustache
@@ -309,7 +309,7 @@
             contentType: 'application/json; charset=utf-8',
         }).done(function() {
             alert('댓글삭제가 완료되었습니다.');
-            window.location.href = '/studys/'+studyId;
+            window.location.href = '/studies/'+studyId;
         }).fail(function(request) {
             alert(request.responseText);
         })
