--- a/app/src/main/resources/templates/users/users-favorite.mustache
+++ b/app/src/main/resources/templates/users/users-favorite.mustache
@@ -25,7 +25,7 @@
                     <tbody>
                     {{#StudyFavoriteDto}}
                         <tr>
-                            <td class="text-center d-none d-md-table-cell"><a href='/studys/{{id}}'>{{name}}</a></td>
+                            <td class="text-center d-none d-md-table-cell"><a href='/studies/{{id}}'>{{name}}</a></td>
                             <td class="text-center d-none d-md-table-cell">{{bookName}}</td>
                             <td class="text-center d-none d-md-table-cell">{{studyState.title}}</td>
                         </tr>
